refactor: Se actualiza el service de tratamientos para incluir datos del profesor al consultar todos los tratamientos a cargo de un alumno